--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-build_flags = '-DVERSION="1.2.0"'
+build_flags = '-DVERSION="1.0.0"'
 extra_scripts = pre:extra_script.py
 monitor_speed = 115200
 lib_deps_external =     
@@ -17,7 +17,7 @@ lib_deps_external =
 
 [env:esp8266]
 platform = espressif8266
-board = nodemcuv2
+board = esp12e
 framework = arduino
 monitor_speed = ${common.monitor_speed}
 build_flags = ${common.build_flags} -D NO_EXTRA_4K_HEAP
